--- a/app/views/histories/my_histories.html.erb
+++ b/app/views/histories/my_histories.html.erb
@@ -1,15 +1,10 @@
 <div class="row">
   <div class="col-xs-8 col-sm-10 col-md-10">
-    <h1>Histories Index</h1>
+    <h1>Historias de ---> <%= current_user.email%></h1>
+    <br>
   </div>
   <div class="col-xs-4 col-sm-2 col-md-2">
-    <% if user_signed_in?%>
-      <%= link_to 'New History', new_history_path, class: "btn btn-info btn-sm" %>
-    <% else%>
-      <%= link_to 'New Usuario', new_user_registration_path, class: "btn btn-success btn-sm" %>
-      <%= link_to 'Loguea!!', new_user_session_path, class: "btn btn-success btn-sm" %>
-
-    <% end %>
+    <%= link_to 'New History', new_history_path, class: "btn btn-info btn-sm" %>
   </div>
 </div>
 
@@ -18,7 +13,6 @@
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
         <%= link_to(image_tag(history.picture.thumb), history) if history.picture? %>
-        <h4>User :<%= history.user.email %></h4>
         <div class="caption">
           <h3><%= history.title %></h3>
           <small><%= time_ago_in_words(history.created_at) %> ago</small>
@@ -33,6 +27,3 @@
     </div>
   <% end %>
 </div>
-
-
-<br>
